[package]
name = "xtra-persistence-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb.workspace = true
xtra.workspace = true
xtra-persistence-core.workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]
